setting max width fixed overflow issues

--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,13 @@
   width: 30px;
 }
 
+.quotes .container {
+  position: absolute;
+}
+
+.quotes .quote-text {
+  max-width: 800px;
+}
 /* .quotes .carousel-control-prev.arrow-left {
   padding-right: var(--quotes-arrows-pad);
 }
@@ -256,6 +263,7 @@
   height: 80px;
   animation: spin 2s linear infinite;
   margin: auto;
+  align-items: center;
 }
 
 @keyframes spin {
